# danmaku2066

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake  win32.cmake
assets/: readme.txt
include/: AssetManager.hpp  Controls.h  Controls.hpp  Defaults.hpp  Enemy.h  Enemy.hpp  Game.h  Game.hpp  GameState.hpp  Interface.hpp  Level.hpp  Logger.hpp  Menu.h  Menu.hpp  Player.h  Player.hpp  Projectile.hpp  Sound.hpp
src/: AssetManager.cpp  Controls.h  Defaults.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Interface.cpp  Level.cpp  Level.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Sound.cpp  Sound.h  main.cpp
